add hide/show toggle logic

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="inputs-container">
                 <label for="question">
                     <input type="text" name="question" id="question" />
-                    <button id="ask-button">Ask the 8 Ball</button>
+                    <button id="ask">Ask the 8 Ball</button>
                 </label>
                 <div>
                     <img src="./assets/magic-8-ball.png" alt="magic 8 ball" />
@@ -35,6 +35,7 @@
             <div id="fortune-container" class="hide">
                 <h3>The Magic 8 ball says...</h3>
                 <p id="fortune"></p>
+                <button id="reset">Try again</button>
             </div>
         </main>
 
